src/hdfs3_bindings.rs

#[test]
fn bindgen_test_layout_hdfsEncryptionFileInfo() {
    assert_eq!(
        ::std::mem::size_of::<hdfsEncryptionFileInfo>(),
        40usize,
        concat!("Size of: ", stringify!(hdfsEncryptionFileInfo))
    );
    assert_eq!(
        ::std::mem::align_of::<hdfsEncryptionFileInfo>(),
        8usize,
        concat!("Alignment of ", stringify!(hdfsEncryptionFileInfo))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<hdfsEncryptionFileInfo>())).mSuite as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsEncryptionFileInfo),
            "::",
            stringify!(mSuite)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<hdfsEncryptionFileInfo>())).mCryptoProtocolVersion as *const _
                as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsEncryptionFileInfo),
            "::",
            stringify!(mCryptoProtocolVersion)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<hdfsEncryptionFileInfo>())).mKey as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsEncryptionFileInfo),
            "::",
            stringify!(mKey)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<hdfsEncryptionFileInfo>())).mKeyName as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsEncryptionFileInfo),
            "::",
            stringify!(mKeyName)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<hdfsEncryptionFileInfo>())).mIv as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsEncryptionFileInfo),
            "::",
            stringify!(mIv)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<hdfsEncryptionFileInfo>())).mEzKeyVersionName as *const _
                as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsEncryptionFileInfo),
            "::",
            stringify!(mEzKeyVersionName)
        )
    );
}
#[doc = " hdfsFileInfo - Information about a file/directory."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct hdfsFileInfo {
    pub mKind: tObjectKind,
    pub mName: *mut ::std::os::raw::c_char,
    pub mLastMod: tTime,
    pub mSize: tOffset,
    pub mReplication: ::std::os::raw::c_short,
    pub mBlockSize: tOffset,
    pub mOwner: *mut ::std::os::raw::c_char,
    pub mGroup: *mut ::std::os::raw::c_char,
    pub mPermissions: ::std::os::raw::c_short,
    pub mLastAccess: tTime,
    pub mHdfsEncryptionFileInfo: *mut hdfsEncryptionFileInfo,
}
#[test]
fn bindgen_test_layout_hdfsFileInfo() {
    assert_eq!(
        ::std::mem::size_of::<hdfsFileInfo>(),
        88usize,
        concat!("Size of: ", stringify!(hdfsFileInfo))
    );
    assert_eq!(
        ::std::mem::align_of::<hdfsFileInfo>(),
        8usize,
        concat!("Alignment of ", stringify!(hdfsFileInfo))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<hdfsFileInfo>())).mKind as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsFileInfo),
            "::",
            stringify!(mKind)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<hdfsFileInfo>())).mName as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsFileInfo),
            "::",
            stringify!(mName)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<hdfsFileInfo>())).mLastMod as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsFileInfo),
            "::",
            stringify!(mLastMod)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<hdfsFileInfo>())).mSize as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsFileInfo),
            "::",
            stringify!(mSize)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<hdfsFileInfo>())).mReplication as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsFileInfo),
            "::",
            stringify!(mReplication)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<hdfsFileInfo>())).mBlockSize as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsFileInfo),
            "::",
            stringify!(mBlockSize)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<hdfsFileInfo>())).mOwner as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsFileInfo),
            "::",
            stringify!(mOwner)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<hdfsFileInfo>())).mGroup as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsFileInfo),
            "::",
            stringify!(mGroup)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<hdfsFileInfo>())).mPermissions as *const _ as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsFileInfo),
            "::",
            stringify!(mPermissions)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<hdfsFileInfo>())).mLastAccess as *const _ as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsFileInfo),
            "::",
            stringify!(mLastAccess)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<hdfsFileInfo>())).mHdfsEncryptionFileInfo as *const _ as usize
        },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsFileInfo),
            "::",
            stringify!(mHdfsEncryptionFileInfo)
        )
    );
}
extern "C" {
    #[doc = " hdfsListDirectory - Get list of files/directories for a given"]
    #[doc = " directory-path. hdfsFreeFileInfo should be called to deallocate memory."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param path The path of the directory."]
    #[doc = " @param numEntries Set to the number of files/directories in path."]
    #[doc = " @return Returns a dynamically-allocated array of hdfsFileInfo"]
    #[doc = " objects; NULL on error."]
    pub fn hdfsListDirectory(
        fs: hdfsFS,
        path: *const ::std::os::raw::c_char,
        numEntries: *mut ::std::os::raw::c_int,
    ) -> *mut hdfsFileInfo;
}
extern "C" {
    #[doc = " hdfsGetPathInfo - Get information about a path as a (dynamically"]
    #[doc = " allocated) single hdfsFileInfo struct. hdfsFreeFileInfo should be"]
    #[doc = " called when the pointer is no longer needed."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param path The path of the file."]
    #[doc = " @return Returns a dynamically-allocated hdfsFileInfo object;"]
    #[doc = " NULL on error."]
    pub fn hdfsGetPathInfo(fs: hdfsFS, path: *const ::std::os::raw::c_char) -> *mut hdfsFileInfo;
}
extern "C" {
    #[doc = " hdfsFreeFileInfo - Free up the hdfsFileInfo array (including fields)"]
    #[doc = " @param infos The array of dynamically-allocated hdfsFileInfo"]
    #[doc = " objects."]
    #[doc = " @param numEntries The size of the array."]
    pub fn hdfsFreeFileInfo(infos: *mut hdfsFileInfo, numEntries: ::std::os::raw::c_int);
}
extern "C" {
    #[doc = " hdfsFreeEncryptionZoneInfo - Free up the hdfsEncryptionZoneInfo array (including fields)"]
    #[doc = " @param infos The array of dynamically-allocated hdfsEncryptionZoneInfo"]
    #[doc = " objects."]
    #[doc = " @param numEntries The size of the array."]
    pub fn hdfsFreeEncryptionZoneInfo(
        infos: *mut hdfsEncryptionZoneInfo,
        numEntries: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[doc = " hdfsGetHosts - Get hostnames where a particular block (determined by"]
    #[doc = " pos & blocksize) of a file is stored. The last element in the array"]
    #[doc = " is NULL. Due to replication, a single block could be present on"]
    #[doc = " multiple hosts."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param path The path of the file."]
    #[doc = " @param start The start of the block."]
    #[doc = " @param length The length of the block."]
    #[doc = " @return Returns a dynamically-allocated 2-d array of blocks-hosts;"]
    #[doc = " NULL on error."]
    pub fn hdfsGetHosts(
        fs: hdfsFS,
        path: *const ::std::os::raw::c_char,
        start: tOffset,
        length: tOffset,
    ) -> *mut *mut *mut ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " hdfsFreeHosts - Free up the structure returned by hdfsGetHosts"]
    #[doc = " @param hdfsFileInfo The array of dynamically-allocated hdfsFileInfo"]
    #[doc = " objects."]
    #[doc = " @param numEntries The size of the array."]
    pub fn hdfsFreeHosts(blockHosts: *mut *mut *mut ::std::os::raw::c_char);
}
extern "C" {
    #[doc = " hdfsGetDefaultBlockSize - Get the default blocksize."]
    #[doc = ""]
    #[doc = " @param fs            The configured filesystem handle."]
    #[doc = " @deprecated          Use hdfsGetDefaultBlockSizeAtPath instead."]
    #[doc = ""]
    #[doc = " @return              Returns the default blocksize, or -1 on error."]
    pub fn hdfsGetDefaultBlockSize(fs: hdfsFS) -> tOffset;
}
extern "C" {
    #[doc = " hdfsGetCapacity - Return the raw capacity of the filesystem."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @return Returns the raw-capacity; -1 on error."]
    pub fn hdfsGetCapacity(fs: hdfsFS) -> tOffset;
}
extern "C" {
    #[doc = " hdfsGetUsed - Return the total raw size of all files in the filesystem."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @return Returns the total-size; -1 on error."]
    pub fn hdfsGetUsed(fs: hdfsFS) -> tOffset;
}
extern "C" {
    #[doc = " Change the user and/or group of a file or directory."]
    #[doc = ""]
    #[doc = " @param fs            The configured filesystem handle."]
    #[doc = " @param path          the path to the file or directory"]
    #[doc = " @param owner         User string.  Set to NULL for 'no change'"]
    #[doc = " @param group         Group string.  Set to NULL for 'no change'"]
    #[doc = " @return              0 on success else -1"]
    pub fn hdfsChown(
        fs: hdfsFS,
        path: *const ::std::os::raw::c_char,
        owner: *const ::std::os::raw::c_char,
        group: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " hdfsChmod"]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param path the path to the file or directory"]
    #[doc = " @param mode the bitmask to set it to"]
    #[doc = " @return 0 on success else -1"]
    pub fn hdfsChmod(
        fs: hdfsFS,
        path: *const ::std::os::raw::c_char,
        mode: ::std::os::raw::c_short,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " hdfsUtime"]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param path the path to the file or directory"]
    #[doc = " @param mtime new modification time or -1 for no change"]
    #[doc = " @param atime new access time or -1 for no change"]
    #[doc = " @return 0 on success else -1"]
    pub fn hdfsUtime(
        fs: hdfsFS,
        path: *const ::std::os::raw::c_char,
        mtime: tTime,
        atime: tTime,
    ) -> ::std::os::raw::c_int;
}
